Coming soon index page

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -1,5 +1,18 @@
 {{ partial "header" . }}
 
-<h1>Hugo with Gulp, PostCSS and Webpack</h1>
+<section class="coming-soon">
+    <div class="tb">
+        <div class="tb-cell">
+            <div class="container">
+                <div class="heading-intro">
+                    <div class="intro-title">
+                        <h1>FCC MONTEVIDEO</h1>
+                        <h2>MUY PRONTO</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 {{ partial "footer" . }}
