--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,1 +1,60 @@
 @import "imports/reset.css";
+
+body {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 16px;
+}
+
+.coming-soon {
+    height: 100vh;
+    width: 100%;
+    background-image: url('/img/bg.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    color: white;
+}
+
+.tb {
+    display: table;
+    table-layout: fixed;
+    width: 100%;
+    height: 100%;
+}
+
+.tb-cell {
+    display: table-cell;
+    vertical-align: middle;
+}
+
+.container {
+    width: 90%;
+    margin: 0px auto;
+
+    @media (min-width: 680px) {
+        width: 70%;
+    }
+}
+
+.heading-intro {
+    text-align: center;
+}
+.intro-title {
+    text-shadow: 2px 2px rgba(12, 11, 11, 0.56);
+}
+.intro-message {
+    font-size: 1.5em;
+}
+
+.heading-intro h1 {
+    font-size: 2em;
+    @media (min-width: 680px) {
+        font-size: 4em;
+    }
+}
+
+.heading-intro h2 {
+    font-size: 1.3em;
+    @media (min-width: 680px) {
+        font-size: 2em;
+    }
+}
