--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -6,8 +6,9 @@
             <div class="container">
                 <div class="heading-intro">
                     <div class="intro-title">
-                        <h1>FCC MONTEVIDEO</h1>
                         <h2>MUY PRONTO</h2>
+                        <h1>FREE CODE CAMP</h1>
+                        <h2>MONTEVIDEO</h2>
                     </div>
                 </div>
             </div>
