--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -7,6 +7,7 @@
 
     <link rel="shortcut icon" href="/fcc.png">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
     <link rel="stylesheet" href="/css/main.css"/>
 
     {{ template "_internal/opengraph.html" . }}
