Add header to home page

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -1,19 +1,23 @@
 {{ partial "head" . }}
 
-<section class="coming-soon">
-    <div class="tb">
-        <div class="tb-cell">
-            <div class="container">
-                <div class="heading-intro">
-                    <div class="intro-title">
-                        <h2>MUY PRONTO</h2>
-                        <h1>FREE CODE CAMP</h1>
-                        <h2>MONTEVIDEO</h2>
+{{ partial "header" . }}
+
+<main class="main">
+    <section class="coming-soon">
+        <div class="tb">
+            <div class="tb-cell">
+                <div class="container">
+                    <div class="heading-intro">
+                        <div class="intro-title">
+                            <h2>MUY PRONTO</h2>
+                            <h1>FREE CODE CAMP</h1>
+                            <h2>MONTEVIDEO</h2>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
+</main>
 
 {{ partial "footer" . }}
