--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,18 +1,23 @@
 @import "imports/reset.css";
+@import "imports/variables/variables.css";
+@import "imports/components/menu.css";
 
 body {
     font-family: 'Montserrat', sans-serif;
     font-size: 16px;
 }
-
+.main {
+    padding-top: var(--menuHeight);
+    min-height: calc(100vh - var(--menuHeight));
+}
 .coming-soon {
-    height: 100vh;
+    height: calc(100vh - var(--menuHeight));
     width: 100%;
     background-image: url('/img/bg.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    color: white;
+    color: var(--aliceBlue);
 }
 
 .tb {
@@ -38,6 +43,7 @@ body {
 
 .heading-intro {
     text-align: center;
+    padding: 50px 0;
 }
 .intro-title {
     text-shadow: 2px 2px rgba(12, 11, 11, 0.56);
