Add active state class

--- a/src/css/imports/components/menu.css
+++ b/src/css/imports/components/menu.css
@@ -23,7 +23,7 @@
     text-decoration: none;
     color: var(--aliceBlue);
 }
-.menu-item > a:hover, .logo:hover {
+.menu-item > a:hover, .logo:hover, .menu-item.active {
     background-color: var(--englishGreen);
     color: var(--mediumTurquoise);
 }
