Basic markup and styles for landing page

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -1,19 +1,33 @@
 {{ partial "head" . }}
 
-<section class="coming-soon">
-    <div class="tb">
-        <div class="tb-cell">
-            <div class="container">
-                <div class="heading-intro">
-                    <div class="intro-title">
-                        <h2>MUY PRONTO</h2>
-                        <h1>FREE CODE CAMP</h1>
-                        <h2>MONTEVIDEO</h2>
-                    </div>
-                </div>
-            </div>
-        </div>
+  <main class="content">
+    <div class="section hero">
+      <div class="heading">
+        <h1>#freeCodeCampMVD: Hola Mundo!</h1>
+
+        <h4>
+          Bienvenidos a la comunidad freeCodeCamp de Montevideo!!
+        </h4>
+      </div>
+
+      <a href="#about" class="scroll-arrow">
+        <i class="fa fa-arrow-down fa-3x"></i>
+      </a>
     </div>
-</section>
+
+    <div id="about" class="section about">
+      <div class="container">
+        <h4>¿Quienes Somos?</h4>
+
+        <p>
+          Somos un grupo de personas que nos encanta la programacion, el desarrollo web y la tecnologia en general.
+        </p>
+
+        <p>
+          En este grupo encontraras desde principiantes que recien comienzan a dar sus primeros pasos en este mundo, hasta gente mas experimentada que quiere seguir aprendiendo y ayudando a los demas compartiendo sus conocimientos y experiencias.
+        </p>
+      </div>
+    </div>
+  </main>
 
 {{ partial "footer" . }}
