--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,61 +1,39 @@
 @import "imports/reset.css";
+@import "imports/skeleton.css";
 
 body {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 16px;
+  font-family: 'Inconsolata', monospace;
 }
 
-.coming-soon {
-    height: 100vh;
-    width: 100%;
-    background-image: url('/img/bg.jpg');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    color: white;
+.landing {
+}
+.section {
+  padding: 6rem 0;
+  text-align: center;
+}
+.section.hero {
+  background-color: #222;
+  color: #fff;
+  height: 100vh;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  & .heading {
+    padding: 8rem 0;
+  }
+
+  & .scroll-arrow {
+    color: #fff;
+    position: absolute;
+    bottom: 30px;
+    left: 50%;
+    margin-left: -20px;
+    animation: bounce 3s 1s infinite;
+  }
 }
 
-.tb {
-    display: table;
-    table-layout: fixed;
-    width: 100%;
-    height: 100%;
-}
-
-.tb-cell {
-    display: table-cell;
-    vertical-align: top;
-}
-
-.container {
-    width: 90%;
-    margin: 0px auto;
-
-    @media (min-width: 680px) {
-        width: 70%;
-    }
-}
-
-.heading-intro {
-    text-align: center;
-}
-.intro-title {
-    text-shadow: 2px 2px rgba(12, 11, 11, 0.56);
-}
-.intro-message {
-    font-size: 1.5em;
-}
-
-.heading-intro h1 {
-    font-size: 2em;
-    @media (min-width: 680px) {
-        font-size: 4em;
-    }
-}
-
-.heading-intro h2 {
-    font-size: 1.3em;
-    @media (min-width: 680px) {
-        font-size: 2em;
-    }
+.section.about {
+  font-size: 1.3em;
 }
