--- a/src/css/imports/skeleton.css
+++ b/src/css/imports/skeleton.css
@@ -25,6 +25,10 @@
 - Media Queries
 */
 
+:root {
+  --text-color: #222;
+}
+
 
 /* Grid
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -125,7 +129,7 @@ body {
   line-height: 1.6;
   font-weight: 400;
   font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #222; }
+  color: var(--text-color); }
 
 
 /* Typography
