--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -1,3 +1,9 @@
-<script src="/app.js"></script>
+  <footer class="section footer">
+    <a href="https://www.netlify.com">
+      <img src="https://www.netlify.com/img/global/badges/netlify-color-accent.svg"/>
+    </a>
+  </footer>
+
+  <script src="/app.js"></script>
 </body>
 </html>
