--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -23,16 +23,16 @@
           Aprende gratis desarrollo web de forma autodidacta y orientada a proyectos, apoyate en la comunidad y comparte tus experiencias para ayudar a otros.
         </p>
 
-        <div class="row">
-          <div class="four columns">
+        <div class="row center-xs">
+          <div class="col-xs-8 col-sm-7 col-md-4">
             <img src="/img/landingIcons_learn.svg" alt="">
             <p>Aprende a tu ritmo</p>
           </div>
-          <div class="four columns">
+          <div class="col-xs-8 col-sm-7 col-md-4">
             <img src="/img/landingIcons_connect.svg" alt="">
             <p>Colabora con la comunidad</p>
           </div>
-          <div class="four columns">
+          <div class="col-xs-8 col-sm-7 col-md-4">
             <img src="/img/landingIcons_portfolio.svg" alt="">
             <p>Crea tu portfolio</p>
           </div>
@@ -62,26 +62,26 @@
           Estamos presentes en multiples plataformas donde puedes participar.
         </p>
 
-        <div class="row social-links">
-          <div class="three columns">
+        <div class="row center-xs social-links">
+          <div class="col-xs-6 col-sm-3 col-md-3">
             <a class="facebook" href="{{ .Site.Params.facebookGroup }}" target="_blank">
               <i class="fa fa-facebook-official fa-4x"></i>
               <span class="social-title">Grupo de Facebook</span>
             </a>
           </div>
-          <div class="three columns">
+          <div class="col-xs-6 col-sm-3 col-md-3">
             <a class="twitter" href="{{ .Site.Params.twitter }}" target="_blank">
               <i class="fa fa-twitter fa-4x"></i>
               <span class="social-title">Twitter</span>
             </a>
           </div>
-          <div class="three columns">
+          <div class="col-xs-6 col-sm-3 col-md-3">
             <a class="github" href="{{ .Site.Params.githubOrg }}" target="_blank">
               <i class="fa fa-github fa-4x"></i>
               <span class="social-title">GitHub Org</span>
             </a>
           </div>
-          <div class="three columns">
+          <div class="col-xs-6 col-sm-3 col-md-3">
             <a class="youtube" href="{{ .Site.Params.youtube }}" target="_blank">
               <i class="fa fa-youtube-play fa-4x"></i>
               <span class="social-title">Canal YouTube</span>
