Add subscribe form

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -88,6 +88,12 @@
             </a>
           </div>
         </div>
+
+        <div class="row center-xs">
+            <div class="col-xs-8 col-md-6">
+                {{ partial "subscribe" . }}
+            </div>
+        </div>
       </div>
     </div>
   </main>
