--- a/src/css/main.css
+++ b/src/css/main.css
@@ -21,6 +21,13 @@
 
 body {
   font-family: 'Inconsolata', monospace;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.content {
+  flex: 1;
 }
 
 .landing {
