Implement basic navigation

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -1,5 +1,7 @@
 {{ partial "head" . }}
 
+  {{ partial "navigation" . }}
+  
   <main class="content">
     <div class="section hero">
       <div class="heading">
