--- a/src/css/imports/skeleton.css
+++ b/src/css/imports/skeleton.css
@@ -46,7 +46,9 @@ p { margin-top: 0; }
 /* Links
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 a {
-  color: #1EAEDB; }
+  color: #1EAEDB;
+  text-decoration: none;
+}
 a:hover {
   color: #0FA0CE; }
 
