--- a/src/css/main.css
+++ b/src/css/main.css
@@ -16,6 +16,8 @@
 
   --youtube-color: #CC181E;
   --youtube-color-hover: #bd0d13;
+
+  --content-padding-top: 90px;
 }
 
 
@@ -28,6 +30,7 @@ body {
 
 .content {
   flex: 1;
+  padding-top: var(--content-padding-top);
 }
 
 .landing {
@@ -45,6 +48,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  margin-top: -var(--content-padding-top);
 
   & .heading {
     padding: 80px 10px;
@@ -107,4 +111,63 @@ body {
 
 .section.footer {
   background-color: var(--dark-background-color);
+}
+
+/* Navigation */
+
+.navigation {
+  background-color: var(--dark-background-color);
+  overflow: auto;
+  position: fixed;
+  width: 100%;
+
+  & .menu {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    float: right;
+    margin: 8px 30px;
+
+    & li {
+      float: left;
+      position: relative;
+      margin: 0;
+    }
+  }
+
+  & .logo {
+    color: var(--light-text-color);
+    font-size: 35px;
+    float: left;
+    padding: 3px 16px;
+    display: inline-block;
+  }
+
+  & .item {
+    color: var(--light-text-color);
+    display: block;
+    text-align: center;
+    padding: 10px 16px;
+    font-size: 1.1em;
+    min-width: 65px;
+
+    &::before {
+      content: "";
+      display: block;
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      width: 0;
+      height: 3px;
+      background: #6aaef4;
+      transition: width .25s;
+    }
+
+    &:hover, &.active {
+      color: #6aaef4;
+    }
+    &:hover::before, &.active::before {
+      width: 100%;
+    }
+  }
 }
