fix some typos in home page

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -1,7 +1,7 @@
 {{ partial "head" . }}
 
   {{ partial "navigation" . }}
-  
+
   <main class="content">
     <div class="section hero">
       <div class="heading">
@@ -47,11 +47,11 @@
         <h4>¿Quienes Somos?</h4>
 
         <p>
-          Somos un grupo de personas que les encanta la programacion, el desarrollo web y la tecnologia en general.
+          Somos un grupo de personas que les encanta la programación, el desarrollo web y la tecnología en general.
         </p>
 
         <p>
-          En este grupo encontraras desde principiantes que recien comienzan a dar sus primeros pasos en este mundo, hasta gente mas experimentada que quiere seguir aprendiendo y ayudando a los demas compartiendo sus conocimientos y experiencias.
+          En este grupo encontraras desde principiantes que recien comienzan a dar sus primeros pasos, hasta gente mas experimentada que quiere seguir aprendiendo y ayudando a los demas compartiendo sus conocimientos y experiencias.
         </p>
       </div>
     </div>
