--- a/src/css/imports/skeleton.css
+++ b/src/css/imports/skeleton.css
@@ -31,7 +31,7 @@ h4 { font-size: 24px; line-height: 1.35; letter-spacing: -0.8px; }
 h5 { font-size: 18px; line-height: 1.5;  letter-spacing: -0.5px; }
 h6 { font-size: 16px; line-height: 1.6;  letter-spacing: 0; }
 
-@media (min-width: 550px) {
+@media (min-width: 48em) {
   h1 { font-size: 50px; }
   h2 { font-size: 42px; }
   h3 { font-size: 36px; }
