--- a/src/css/main.css
+++ b/src/css/main.css
@@ -17,9 +17,14 @@
   --youtube-color: #CC181E;
   --youtube-color-hover: #bd0d13;
 
+  --border-color: #ccc;
+
   --content-padding-top: 90px;
 }
 
+@custom-media --sm-viewport only screen and (min-width: 48em);
+@custom-media --md-viewport only screen and (min-width: 64em);
+@custom-media --lg-viewport only screen and (min-width: 75em);
 
 body {
   font-family: 'Inconsolata', monospace;
@@ -127,11 +132,16 @@ body {
     padding: 0;
     float: right;
     margin: 8px 30px;
+    display: none;
 
     & li {
       float: left;
       position: relative;
       margin: 0;
+    }
+
+    @media (--sm-viewport) {
+      display: block;
     }
   }
 
@@ -169,5 +179,67 @@ body {
     &:hover::before, &.active::before {
       width: 100%;
     }
+  }
+}
+
+
+/*
+  Blog
+*/
+
+.blog-container {
+  padding: 0 1em;
+}
+
+.blog-categories {
+  text-align: center;
+
+  @media (--sm-viewport) {
+    text-align: left;
+  }
+
+  & .category-link {
+    display: inline-block;
+    padding: 3px 15px;
+    border: 1px solid var(--border-color);
+    border-radius: 30px;
+    margin-bottom: 1em;
+
+    &.active, &:hover {
+      background-color: #6aaef4;
+      color: var(--light-text-color);
+    }
+  }
+}
+
+.blog-posts {
+  padding: 1em 0;
+
+  & .post {
+    margin-bottom: 1.5em;
+
+    & .post-title {
+      font-size: 2.2em;
+    }
+
+    & .post-meta {
+      font-style: italic;
+    }
+
+    & .post-summary {
+      margin-top: 1em;
+
+      & p {
+        margin: 0;
+      }
+    }
+  }
+}
+
+.blog-sidebar {
+  display: none;
+
+  @media (--sm-viewport) {
+    display: block;
   }
 }
