check if the number of posts is >= 1

--- a/site/layouts/section/blog.html
+++ b/site/layouts/section/blog.html
@@ -3,6 +3,7 @@
 <div class="row blog-container">
     <section class="col-xs-12 col-sm-8 col-md-8 blog-content">
         <div class="blog-posts">
+        {{if ge (len .Data.Pages) 1 }}
             {{ range first 10 .Data.Pages }}
                 <div class="post">
                     <a href="{{ .RelPermalink }}" class="post-title">
@@ -30,6 +31,7 @@
                     </div>
                 </div>
             {{end}}
+        {{end}}
         </div>
     </section>
 
