--- a/src/css/main.css
+++ b/src/css/main.css
@@ -224,6 +224,14 @@ body {
 
     & .post-meta {
       font-style: italic;
+
+      & .author-avatar {
+        display: inline-block;
+        width: 30px;
+        height: 30px;
+        border-radius: 50%;
+        vertical-align: middle;
+      }
     }
 
     & .post-summary {
