--- a/site/layouts/blog/single.html
+++ b/site/layouts/blog/single.html
@@ -19,6 +19,16 @@
                 </div>
             </div>
         </div>
+
+        <div class="row center-xs">
+            <div class="col-xs-12 col-sm-12 col-md-9">
+                <hr>
+                
+                <div class="post-comments">
+                {{ template "_internal/disqus.html" . }}
+                </div>
+            </div>
+        </div>
     </div>
 </main>
 
