Use custom disqus partial

--- a/site/layouts/blog/single.html
+++ b/site/layouts/blog/single.html
@@ -23,9 +23,9 @@
         <div class="row center-xs">
             <div class="col-xs-12 col-sm-12 col-md-9">
                 <hr>
-                
+
                 <div class="post-comments">
-                {{ template "_internal/disqus.html" . }}
+                {{ partial "disqus.html" . }}
                 </div>
             </div>
         </div>
