--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -4,6 +4,12 @@
     </a>
   </footer>
 
+  <script
+    src="https://code.jquery.com/jquery-3.1.1.min.js"
+    integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+    crossorigin="anonymous">
+  </script>
+
   <script src="/app.js"></script>
 </body>
 </html>
