Implement basic footer

--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -1,7 +1,75 @@
   <footer class="section footer">
-    <a href="https://www.netlify.com">
-      <img src="https://www.netlify.com/img/global/badges/netlify-color-accent.svg"/>
-    </a>
+    <div class="row center-xs">
+      <div class="col-xs-12 col-sm-6 col-md-4">
+        <p class="footer-heading">Comunidad freeCodeCamp Global</p>
+
+        <div class="footer-links">
+          <p>
+            <a href="https://www.freecodecamp.com" target="_blank">Sitio oficial</a>
+          </p>
+          <p>
+            <a href="https://medium.freecodecamp.com/" target="_blank">Publicación en Medium</a>
+          </p>
+          <p>
+            <a href="https://youtube.com/freecodecamp" target="_blank">Canal de YouTube</a>
+          </p>
+          <p>
+            <a href="https://facebook.com/freecodecamp" target="_blank">Pagina de Facebook</a>
+          </p>
+          <p>
+            <a href="https://twitter.com/freecodecamp" target="_blank">Twitter</a>
+          </p>
+          <p>
+            <a href="https://forum.freecodecamp.com/" target="_blank">Foro</a>
+          </p>
+          <p>
+            <a href="https://github.com/freecodecamp" target="_blank">GitHub</a>
+          </p>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-4">
+        <p class="footer-heading">Comunidad freeCodeCamp Montevideo</p>
+
+        <div class="footer-links">
+          <p>
+            <a href="https://www.facebook.com/groups/free.code.camp.montevideo/" target="_blank">Grupo de Facebook</a>
+          </p>
+          <p>
+            <a href="https://www.youtube.com/channel/UCTIYpVhXmFgTZ9CiuAU22Rw" target="_blank">Canal de YouTube</a>
+          </p>
+          <p>
+            <a href="https://twitter.com/fccmontevideo" target="_blank">Twitter</a>
+          </p>
+          <p>
+            <a href="https://github.com/FreeCodeCampMontevideo" target="_blank">GitHub</a>
+          </p>
+          <p>
+            <a href="https://discord.gg/akxwRSd" target="_blank">Salas de chat</a>
+          </p>
+          <p>
+            <a href="/blog">Blog</a>
+          </p>
+          <p>
+            <a href="/events">Eventos</a>
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-12">
+        <p class="footer-heading">
+          Sitio Hosteado en Netlify
+        </p>
+        <p>
+          <a href="https://www.netlify.com" target="_blank">
+            <img src="https://www.netlify.com/img/global/badges/netlify-color-accent.svg" />
+          </a>
+        </p>
+        <p class="footer-heading">
+          <i class="fa fa-code" aria-hidden="true"></i> with <i class="fa fa-heart" aria-hidden="true"></i> by freeCodeCamp Montevideo
+        </p>
+      </div>
+    </div>
   </footer>
 
   <script
