Add rel=“noopener” to external links

--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -5,25 +5,25 @@
 
         <div class="footer-links">
           <p>
-            <a href="https://www.freecodecamp.com" target="_blank">Sitio oficial</a>
+            <a href="https://www.freecodecamp.com" target="_blank" rel="noopener">Sitio oficial</a>
           </p>
           <p>
-            <a href="https://medium.freecodecamp.com/" target="_blank">Publicación en Medium</a>
+            <a href="https://medium.freecodecamp.com/" target="_blank" rel="noopener">Publicación en Medium</a>
           </p>
           <p>
-            <a href="https://youtube.com/freecodecamp" target="_blank">Canal de YouTube</a>
+            <a href="https://youtube.com/freecodecamp" target="_blank" rel="noopener">Canal de YouTube</a>
           </p>
           <p>
-            <a href="https://facebook.com/freecodecamp" target="_blank">Pagina de Facebook</a>
+            <a href="https://facebook.com/freecodecamp" target="_blank" rel="noopener">Pagina de Facebook</a>
           </p>
           <p>
-            <a href="https://twitter.com/freecodecamp" target="_blank">Twitter</a>
+            <a href="https://twitter.com/freecodecamp" target="_blank" rel="noopener">Twitter</a>
           </p>
           <p>
-            <a href="https://forum.freecodecamp.com/" target="_blank">Foro</a>
+            <a href="https://forum.freecodecamp.com/" target="_blank" rel="noopener">Foro</a>
           </p>
           <p>
-            <a href="https://github.com/freecodecamp" target="_blank">GitHub</a>
+            <a href="https://github.com/freecodecamp" target="_blank" rel="noopener">GitHub</a>
           </p>
         </div>
       </div>
@@ -32,19 +32,19 @@
 
         <div class="footer-links">
           <p>
-            <a href="https://www.facebook.com/groups/free.code.camp.montevideo/" target="_blank">Grupo de Facebook</a>
+            <a href="{{ .Site.Params.facebookGroup }}" target="_blank" rel="noopener">Grupo de Facebook</a>
           </p>
           <p>
-            <a href="https://www.youtube.com/channel/UCTIYpVhXmFgTZ9CiuAU22Rw" target="_blank">Canal de YouTube</a>
+            <a href="{{ .Site.Params.youtube }}" target="_blank" rel="noopener">Canal de YouTube</a>
           </p>
           <p>
-            <a href="https://twitter.com/fccmontevideo" target="_blank">Twitter</a>
+            <a href="{{ .Site.Params.twitter }}" target="_blank" rel="noopener">Twitter</a>
           </p>
           <p>
-            <a href="https://github.com/FreeCodeCampMontevideo" target="_blank">GitHub</a>
+            <a href="{{ .Site.Params.githubOrg }}" target="_blank" rel="noopener">GitHub</a>
           </p>
           <p>
-            <a href="https://discord.gg/akxwRSd" target="_blank">Salas de chat</a>
+            <a href="https://discord.gg/akxwRSd" target="_blank" rel="noopener">Salas de chat</a>
           </p>
           <p>
             <a href="/blog">Blog</a>
@@ -61,7 +61,7 @@
           Sitio Hosteado en Netlify
         </p>
         <p>
-          <a href="https://www.netlify.com" target="_blank">
+          <a href="https://www.netlify.com" target="_blank" rel="noopener">
             <img src="https://www.netlify.com/img/global/badges/netlify-color-accent.svg" />
           </a>
         </p>
