Update layout to use description and image params

--- a/site/layouts/blog/single.html
+++ b/site/layouts/blog/single.html
@@ -14,7 +14,15 @@
                     {{ partial "post-meta.html" . }}
 
                     <div class="post-content">
-                        {{ .Content }}
+                      <p>
+                        {{ .Params.Description }}
+                      </p>
+
+                      <p>
+                        <img src="{{ .Params.image }}" alt="{{ .Title }}">
+                      </p>
+
+                      {{ .Content }}
                     </div>
                 </div>
             </div>
