use Netlify form submission instead of formspree.io

--- a/site/layouts/partials/subscribe.html
+++ b/site/layouts/partials/subscribe.html
@@ -1,7 +1,9 @@
-<p>Suscribete y enterate de las últimas novedades!</p>
+<div class="subscribe-section">
+  <h5>Suscribete y enterate de las últimas novedades!</h5>
 
-<form class="subscribe-form" action="https://formspree.io/subscribe@fccmontevideo.com" method="post">
-  <input class="u-full-width" type="email" name="email" placeholder="email@example.com">
-  <input type="hidden" name="_subject" value="Nuevo suscriptor" />
-  <input class="button-primary" type="submit" value="Suscribirme">
-</form>
+  <form class="subscribe-form" name="subscribe" netlify>
+    <input class="u-full-width" type="email" name="email" placeholder="tu direccion de correo">
+    <input type="hidden" name="_subject" value="Nuevo suscriptor" />
+    <input class="button-primary" type="submit" value="Suscribirme">
+  </form>
+</div>
