--- a/src/css/main.css
+++ b/src/css/main.css
@@ -55,9 +55,12 @@ blockquote {
   font-size: 1.3em;
 }
 .section.hero {
-  background-color: var(--dark-background-color);
+  background-color: #018E85;
+  background-image: url('/img/home/background.jpg');
+  background-position: center;
+  background-size: cover;
   color: var(--light-text-color);
-  height: 100vh;
+  height: 90vh;
   padding: 0;
   display: flex;
   flex-direction: column;
