Move hero section to partial

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -3,15 +3,8 @@
   {{ partial "navigation" . }}
 
   <main class="content">
-    <div class="section hero">
-      <div class="heading">
-        <h1>#freeCodeCampMVD: Hola Mundo!</h1>
 
-        <h4>
-          Bienvenidos a la comunidad freeCodeCamp de Montevideo!!
-        </h4>
-      </div>
-    </div>
+    {{ partial "hero" . }}
 
     <div id="learn" class="section learn">
       <div class="container">
